Fixed issue with expand button visibility

--- a/assets/sass/header/header.scss
+++ b/assets/sass/header/header.scss
@@ -27,10 +27,7 @@
 }
 
 /** By default, hide the expand menu button **/
-.expand-button{
-    display: none;
-}
-.checkbox-expand-hack{
+.menu-show-button{
     display: none;
 }
 
